<resources>
    <string name="app_name">JobManagement</string>
    <string name="etEmail">Enter e-mail address</string>
    <string name="etPassword">Enter password</string>
    <string name="enterEmail">Enter email</string>
    <string name="enterPassword">Enter password</string>
    <string name="cbKeepLoggedIn">Keep you logged in?</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
