<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/ivJobs"
        android:layout_width="@dimen/layout_width_120"
        android:layout_height="@dimen/layout_height_120"
        android:layout_marginStart="@dimen/layout_marginStart_150"
        android:layout_marginTop="@dimen/layout_marginTop_60"
        android:background="@drawable/logo_drawable"
        app:srcCompat="@drawable/job_icon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textEtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_marginTop_120"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/FloatingHintStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:layout_marginBottom="@dimen/layout_marginBottom"
            android:gravity="center_horizontal"
            android:hint="@string/enterEmail" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_marginTop"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/FloatingHintStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:layout_marginBottom="@dimen/layout_marginBottom"
            android:gravity="center_horizontal"
            android:hint="@string/enterPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cbKeepLogged"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_20"
        android:layout_marginStart="@dimen/layout_marginStart"
        android:layout_marginTop="@dimen/layout_marginTop"
        android:layout_marginEnd="@dimen/layout_marginEnd"
        android:text="@string/cbKeepLoggedIn" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_marginTop"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/button_background"
            android:drawableLeft="@mipmap/register"
            android:text="@string/register">

        </Button>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/button_background"
            android:drawableLeft="@mipmap/login"
            android:text="@string/login"></Button>

    </LinearLayout>

</LinearLayout>